buildscript {
    ext.kotlin_version = '1.9.22'
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
}
plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id "com.google.cloud.tools.jib" version "3.0.0"
    id "org.sonarqube" version "4.3.0.3225"
    id "jacoco"
    id("io.sentry.jvm.gradle") version "4.2.0"
}

apply plugin: 'java'
apply plugin: 'kotlin'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply from: './bumpVersion.gradle'

group = 'com.agencify'
version = properties["appVersionName"]


configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}


ext {
    set('springCloudVersion', "2023.0.0")
    set('keycloakVersion', "21.1.1")
}


dependencies {
    implementation("org.springframework.cloud:spring-cloud-starter-bootstrap")
    implementation('org.springframework.cloud:spring-cloud-starter-config')
    implementation("org.springframework.cloud:spring-cloud-starter-openfeign")
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation('org.springframework.cloud:spring-cloud-starter-config')
    // cloud bus
    implementation("org.springframework.cloud:spring-cloud-starter-bus-kafka")

    /*Rest Assured*/
    // Rest Assured for testing
    testImplementation 'io.rest-assured:rest-assured:5.5.0'

    // TestNG for testing
    testImplementation 'org.testng:testng:7.10.2'

    // JSON Simple for JSON processing
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

    // Rest Assured JSON Schema Validator
    implementation 'io.rest-assured:json-schema-validator:5.5.0'

    //swagger
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0")


    //kafka
    implementation('org.springframework.kafka:spring-kafka')

    /*security*/
    implementation('org.keycloak:keycloak-admin-client:21.1.1')
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-oauth2-jose'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    /*Discovery*/
    implementation('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
    implementation('org.springframework.cloud:spring-cloud-starter-kubernetes-client-all')

    /*sentry*/
    implementation platform('io.sentry:sentry-bom:6.4.2')
    implementation('io.sentry:sentry-spring-boot-starter')
    implementation('io.sentry:sentry-logback')


    /* testContainers*/
    implementation group: 'com.squareup.okhttp3', name: 'mockwebserver', version: '4.9.0'


    runtimeOnly('com.mysql:mysql-connector-j')
    compileOnly ('org.projectlombok:lombok')
    annotationProcessor ('org.projectlombok:lombok')
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        mavenBom "org.keycloak.bom:keycloak-adapter-bom:${keycloakVersion}"
    }
}

test {
    finalizedBy jacocoTestReport
    useJUnitPlatform()
    reports {
        junitXml.destination(file("$buildDir/reports/junit"))
    }
    jacoco {
        destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
        classDumpDir = file("$buildDir/jacoco/classpathdumps")
    }
}

sonar {
    properties {
        properties["sonar.projectKey"] += "agencify-crm"
        properties["sonar.jdbc.dialect"] += "mysql"
        properties["sonar.language"] += "java"
        properties["sonar.binaries"] += file("${buildDir}/classes")
        properties["sonar.dynamicAnalysis"] += "reuseReports"
        properties["sonar.junit.reportsPath"] += file("$buildDir/reports/junit/*")
        properties["sonar.exclusions"] = "**/dto/**, **/dtos/**, **/model/**, **/models/**, **/config/**, **/repository/**, **/enums/**,**/exception/enums/**,**/exception/error/**"
        properties["sonar.core.codeCoveragePlugin"] += "jacoco"
        properties["sonar.coverage.jacoco.xmlReportPaths"] += file("${buildDir}/reports/jacoco/test/jacoco.xml")
    }
}

jacocoTestReport {
    reports {
        xml.required = true
        csv.required  = false
        html.destination file("${buildDir}/reports/jacoco/html")
        xml.destination file("${buildDir}/reports/jacoco/test/jacoco.xml")
    }
}

jacoco {
    toolVersion = "0.8.9"
}
kotlin {
    jvmToolchain(21)
}

tasks.withType(Test) {
    jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
}
